new fonts and team section

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Start Bootstrap - Scrolling Nav</title>
+    <title>Anglotraducciones - Servicios de traducción</title>
+
+    <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Raleway:400,300,700" rel="stylesheet" type="text/css">
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
@@ -20,7 +23,7 @@
 <!-- The #page-top ID is part of the scrolling feature - the data-spy and data-target are part of the built-in Bootstrap scrollspy function -->
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-default navbar-fixed-top " role="navigation">
         <div class="container">
             <div class="navbar-header page-scroll">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
@@ -29,7 +32,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top">Anglotraducciones</a>
+                <a class="navbar-brand" href="#page-top" style="font-size: 24px;">
+                    Anglotraducciones
+                </a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -84,17 +89,39 @@
     </div>
     </section>
 
-    <section id="about" class="about-section alert-info">
+    <section id="about" class="about-section">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1>Equipo</h1>
+            <div class="row centered">
+                <h1>Equipo</h1>
+                <hr/>
+                <br/>
+                <br/>
+                <div class="col-lg-4 centered">
+                    <img class="img img-circle" src="assets/img/team/team01.jpg" height="120px" width="120px" alt="">
+                    <br>
+                    <h4><b>Gloria Alveal</b></h4>
+                    <p>Traductora Inglés-Español-Inglés, titulada de la Universidad de Concepción,
+                    encargada de gestión de proyectos.</p>
+                </div>
+                <div class="col-lg-4 centered">
+                    <img class="img img-circle" src="assets/img/team/team01.jpg" height="120px" width="120px" alt="">
+                    <br>
+                    <h4><b>Karla Alveal</b></h4>
+                    <p>Traductora Inglés-Español, titulada de la Universidad Católica de Temuco,
+                    especializada en traducciones técnicas y científicas.</p>
+                </div>
+                <div class="col-lg-4 centered">
+                    <img class="img img-circle" src="assets/img/team/team01.jpg" height="120px" width="120px" alt="">
+                    <br>
+                    <h4><b>Carol Cardonne</b></h4>
+                    <p>Editora Español-Inglés, regresa desde Australia en 2012, y actualmente
+                    dicta cátedras de inglés en la Universidad de Chile.</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="services" class="services-section alert-info">
+    <section id="services" class="services-section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -104,7 +131,7 @@
         </div>
     </section>
 
-    <section id="contact" class="contact-section alert-info">
+    <section id="contact" class="contact-section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12" style="text-align: center;">
