--- a/index.html
+++ b/index.html
@@ -71,16 +71,8 @@
                 <div class="col-lg-12">
                     <div class="intro-message">
                         <h1>Servicios de Traducción</h1>
-                        <h3>Traducciones a tu medida...</h3>
+                        <h3 style="font-weight: 900;">Traducciones a tu medida...</h3>
                         <hr class="intro-divider">
-                        <!-- <ul class="list-inline intro-social-buttons">
-                            <li><a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                            </li>
-                            <li><a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                            </li>
-                            <li><a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
-                            </li>
-                        </ul> -->
                     </div>
                 </div>
             </div>
@@ -95,9 +87,6 @@
         <div class="container">
             <div class="row centered">
                 <h1>Equipo</h1>
-                <hr/>
-                <br/>
-                <br/>
                 <div class="col-lg-4 centered">
                     <img class="img img-circle" src="assets/img/team/team01.jpg" height="120px" width="120px" alt="">
                     <br>
@@ -125,10 +114,8 @@
 
     <section id="services" class="services-section">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1>Servicios</h1>
-                </div>
+            <div class="row centered">
+                <h1>Servicios</h1> 
             </div>
         </div>
     </section>
@@ -224,7 +211,16 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="js/scrolling-nav.js"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+      ga('create', 'UA-50423610-1', 'anglotraducciones.cl');
+      ga('send', 'pageview');
+
+    </script>
 </body>
 
 </html>
