--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Raleway:400,300,700" rel="stylesheet" type="text/css">
 
-
+    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
 
@@ -53,6 +53,9 @@
                         <a href="#services">Servicios</a>
                     </li>
                     <li class="page-scroll">
+                        <a href="#clients">Clientes</a>
+                    </li>
+                    <li class="page-scroll">
                         <a href="#contact">Contacto</a>
                     </li>
                 </ul>
@@ -70,8 +73,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
-                        <h1>Servicios de Traducción</h1>
-                        <h3 style="font-weight: 900;">Traducciones a tu medida...</h3>
+                        <h1>Servicios Lingüísticos</h1>
+                        <h3 style="font-weight: 900;">Traducciones Inglés-Español-Inglés, Revisión y Edición de Textos</h3>
                         <hr class="intro-divider">
                     </div>
                 </div>
@@ -85,26 +88,32 @@
 
     <section id="about" class="about-section">
         <div class="container">
-            <div class="row centered">
-                <h1>Equipo</h1>
-                <div class="col-lg-4 centered">
-                    <img class="img img-circle" src="assets/img/team/team01.jpg" height="120px" width="120px" alt="">
+            <div class="row">
+                <h1>EQUIPO</h1>
+                <hr>
+                <br>
+                <br>
+                <div class="col-md-4 centered">
+                    <img class="img img-circle" src="gloria.jpg" height="120px"alt="">
                     <br>
                     <h4><b>Gloria Alveal</b></h4>
+                    <a href="http://cl.linkedin.com/pub/gloria-alveal/21/824/356"><i class="fa fa-linkedin-square"></i></a>
                     <p>Traductora Inglés-Español-Inglés, titulada de la Universidad de Concepción,
                     encargada de gestión de proyectos.</p>
                 </div>
-                <div class="col-lg-4 centered">
-                    <img class="img img-circle" src="assets/img/team/team01.jpg" height="120px" width="120px" alt="">
+                <div class="col-md-4 centered">
+                    <img class="img img-circle" src="karla.jpg" height="120px" width="120px" alt="">
                     <br>
                     <h4><b>Karla Alveal</b></h4>
+                    <a href="http://cl.linkedin.com/pub/karla-alveal-saavedra/95/695/86b"><i class="fa fa-linkedin-square"></i></a>
                     <p>Traductora Inglés-Español, titulada de la Universidad Católica de Temuco,
                     especializada en traducciones técnicas y científicas.</p>
                 </div>
-                <div class="col-lg-4 centered">
-                    <img class="img img-circle" src="assets/img/team/team01.jpg" height="120px" width="120px" alt="">
+                <div class="col-md-4 centered">
+                    <img class="img img-circle" src="carol.jpg" height="120px" width="120px" alt="">
                     <br>
                     <h4><b>Carol Cardonne</b></h4>
+                    <a href="http://cl.linkedin.com/pub/carol-cardonne/87/959/27a"><i class="fa fa-linkedin-square"></i></a>
                     <p>Editora Español-Inglés, regresa desde Australia en 2012, y actualmente
                     dicta cátedras de inglés en la Universidad de Chile.</p>
                 </div>
@@ -115,7 +124,86 @@
     <section id="services" class="services-section">
         <div class="container">
             <div class="row centered">
-                <h1>Servicios</h1> 
+                <h1>SERVICIOS</h1> 
+                <hr/>
+                <br>
+                <br>
+                <div class="cl-lg">
+
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="clients" class="services-section">
+        <div class="container">
+            <div class="row">
+                <h1>NUESTROS CLIENTES</h1>
+                <hr/>
+                <br>
+                <br>
+                <div class="row centered">
+                    <div class="col-md-3 centered">
+                        <a href="http://www.masisa.cl">
+                            <img class="img" src="masisa.jpg" alt="Masisa">
+                        </a>
+                    </div>
+                    <div class="col-md-3 centered">
+                        <a href="http://www.codelco.cl">
+                            <img class="img" src="codelco.jpg" alt="Codelco">
+                        </a>
+                    </div>
+                    <div class="col-md-3 centered">
+                        <a href="http://www.lpchile.cl">
+                            <img class="img" src="lp.jpg" alt="LP">
+                        </a>
+                    </div>
+                    <div class="col-md-3 centered">
+                        <a href="http://www.procarne.cl">
+                            <img class="img" src="procarne.jpg" alt="Procarne">
+                        </a>
+                    </div>
+                </div>
+                <br>
+                <div class="row centered">
+                    <div class="col-md-3 centered">
+                        <a href="http://www.mafrisur.cl">
+                            <img class="img" src="mafrisur.jpg" alt="Mafrisur">
+                        </a>
+                    </div>
+                    <div class="col-md-3 centered">
+                        <a href="http://www.diarioaustral.cl">
+                            <img class="img" src="diarioaustral.jpg" alt="Diario Austral">
+                        </a>
+                    </div>
+                    <div class="col-md-3 centered">
+                        <a href="http://chile.usembassy.gov">
+                            <img class="img" src="usembassy.jpg" alt="US Embassy">
+                        </a>
+                    </div>
+                    <div class="col-md-3 centered">
+                        <a href="http://www.carabineros.cl">
+                            <img class="img" src="carabineros.jpg" alt="Carabineros">
+                        </a>
+                    </div>
+                </div>
+                <br>
+                <div class="row centered">
+                    <div class="col-md-4 centered">
+                        <a href="http://www.sernatur.cl">
+                            <img class="img" src="sernatur.jpg" alt="Sernatur">
+                        </a>
+                    </div>
+                    <div class="col-md-4 centered">
+                        <a href="http://www.uach.cl">
+                            <img class="img" src="uach.jpg" alt="Uach">
+                        </a>
+                    </div>
+                    <div class="col-md-4 centered">
+                        <a href="http://www.municipalidadosorno.cl">
+                            <img class="img" src="municipalidadosorno.jpg" alt="Municipalidad de Osorno">
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -123,66 +211,62 @@
     <section id="contact" class="contact-section">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12" style="text-align: center;">
-                    <h1>Contacto</h1>
+                <h1 style="text-align: center;">CONTACTO</h1>
+                <hr/>
+                <br>
+                <br>
+                <div class="col-sm-8">
+                    <h3>Let's Get In Touch!</h3>
+                    <p>Si necesitas que nos comuniquemos contigo, o alguna cotización, deja tus datos y te contactaremos.</p>
+                    <form role="form" method="POST" action="contact-form-submission.php">
+                        <div class="row">
+                          <div class="form-group col-lg-4">
+                            <label for="input1">Nombre</label>
+                            <input type="text" name="contact_name" class="form-control" id="input1">
+                          </div>
+                          <div class="form-group col-lg-4">
+                            <label for="input2">Email</label>
+                            <input type="email" name="contact_email" class="form-control" id="input2">
+                          </div>
+                          <div class="form-group col-lg-4">
+                            <label for="input3">Número telefónico</label>
+                            <input type="phone" name="contact_phone" class="form-control" id="input3">
+                          </div>
+                          <div class="clearfix"></div>
+                          <div class="form-group col-lg-12">
+                            <label for="input4">Mensaje</label>
+                            <textarea name="contact_message" class="form-control" rows="6" id="input4"></textarea>
+                          </div>
+                          <div class="form-group col-lg-12">
+                            <input type="hidden" name="save" value="contact">
+                            <button type="submit" class="btn btn-primary">Enviar</button>
+                          </div>
+                        </div>
+                    </form>
                 </div>
+
+                <div class="col-sm-4">
+                  <h3>Anglotraducciones</h3>
+                  <h4>Servicios de Traducción</h4>
+                  <p>
+                    Apoquindo 7600, Dpto. 40A.<br>
+                    Las Condes, Región Metropolitana<br>
+                  </p>
+                  <p><i class="fa fa-phone"></i>: (56) 0447910483</p>
+                  <p><i class="fa fa-mobile"></i>: (56) 973830457</p>
+                  <p><i class="fa fa-mobile"></i>: (56) 993157811</p>
+                  <p><i class="fa fa-envelope-o"></i>: <a href="mailto:contacto@anglotraducciones.cl">contacto@anglotraducciones.cl</a></p>
+                  <p><i class="fa fa-clock-o"></i>: Lunes - Viernes: 9:00 a 17:00</p>
+                  <ul class="list-unstyled list-inline list-social-icons">
+                    <li class="tooltip-social facebook-link"><a href="#facebook-page" data-toggle="tooltip" data-placement="top" title="" data-original-title="Facebook"><i class="fa fa-facebook-square fa-2x"></i></a></li>
+                    <li class="tooltip-social twitter-link"><a href="#twitter-profile" data-toggle="tooltip" data-placement="top" title="" data-original-title="Twitter"><i class="fa fa-twitter-square fa-2x"></i></a></li>
+                  </ul>
+                </div>
+
             </div>
-            <div class="row">
-
-        <div class="col-sm-8">
-          <h3>Let's Get In Touch!</h3>
-          <p>Si necesitas que nos comunicamos contigo, o alguna cotización, deja tus datos y nos contactaremos contigo.</p>
-                        <form role="form" method="POST" action="contact-form-submission.php">
-                <div class="row">
-                  <div class="form-group col-lg-4">
-                    <label for="input1">Nombre</label>
-                    <input type="text" name="contact_name" class="form-control" id="input1">
-                  </div>
-                  <div class="form-group col-lg-4">
-                    <label for="input2">Email</label>
-                    <input type="email" name="contact_email" class="form-control" id="input2">
-                  </div>
-                  <div class="form-group col-lg-4">
-                    <label for="input3">Número telefónico</label>
-                    <input type="phone" name="contact_phone" class="form-control" id="input3">
-                  </div>
-                  <div class="clearfix"></div>
-                  <div class="form-group col-lg-12">
-                    <label for="input4">Mensaje</label>
-                    <textarea name="contact_message" class="form-control" rows="6" id="input4"></textarea>
-                  </div>
-                  <div class="form-group col-lg-12">
-                    <input type="hidden" name="save" value="contact">
-                    <button type="submit" class="btn btn-primary">Enviar</button>
-                  </div>
-              </div>
-            </form>
-        </div>
-
-        <div class="col-sm-4">
-          <h3>Anglotraducciones</h3>
-          <h4>Servicios de Traducción</h4>
-          <p>
-            Apoquindo 7600, Dpto. 40A.<br>
-            Las Condes, Región Metropolitana<br>
-          </p>
-          <p><i class="fa fa-phone"></i> <abbr title="Fijo">F</abbr>: (56) 0447910483</p>
-          <p><i class="fa fa-phone"></i> <abbr title="Móvil">M</abbr>: (56) 973830457</p>
-          <p><i class="fa fa-phone"></i> <abbr title="Móvil">M</abbr>: (56) 993157811</p>
-          <p><i class="fa fa-envelope-o"></i> <abbr title="Email">E</abbr>: <a href="mailto:contacto@anglotraducciones.cl">contacto@anglotraducciones.cl</a></p>
-          <p><i class="fa fa-clock-o"></i> <abbr title="Horario">H</abbr>: Lunes - Viernes: 9:00 a 17:00</p>
-          <ul class="list-unstyled list-inline list-social-icons">
-            <li class="tooltip-social facebook-link"><a href="#facebook-page" data-toggle="tooltip" data-placement="top" title="" data-original-title="Facebook"><i class="fa fa-facebook-square fa-2x"></i></a></li>
-            <li class="tooltip-social linkedin-link"><a href="#linkedin-company-page" data-toggle="tooltip" data-placement="top" title="" data-original-title="LinkedIn"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
-            <li class="tooltip-social twitter-link"><a href="#twitter-profile" data-toggle="tooltip" data-placement="top" title="" data-original-title="Twitter"><i class="fa fa-twitter-square fa-2x"></i></a></li>
-            <li class="tooltip-social google-plus-link"><a href="#google-plus-page" data-toggle="tooltip" data-placement="top" title="" data-original-title="Google+"><i class="fa fa-google-plus-square fa-2x"></i></a></li>
-          </ul>
-        </div>
-
-      </div>
         </div>
     </section>
-    <footer>
+    <!-- <footer>
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -203,7 +287,7 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </footer> -->
     <!-- Core JavaScript Files -->
     <script src="js/jquery-1.10.2.js"></script>
     <script src="js/bootstrap.min.js"></script>
@@ -216,10 +300,8 @@
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
       ga('create', 'UA-50423610-1', 'anglotraducciones.cl');
       ga('send', 'pageview');
-
     </script>
 </body>
 
