--- a/index.html
+++ b/index.html
@@ -4,27 +4,19 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description=" content="Anglotraducciones - Servicios Lingüísticos: Traducciones Inglés-Español-Inglés, Revisión y Edición de Textos.">
     <meta name="google-site-verification" content="7EojNA6z72_RMO-HTwcXC1iCmws_H6U6ifK5aFxolrA" />
 
-    <title>Anglotraducciones - Servicios de traducción</title>
+    <title>Anglotraducciones - Servicios Lingüísticos | Traducciones Inglés-Español-Inglés | Revisión y Edición de Textos</title>
 
     <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Raleway:400,300,700" rel="stylesheet" type="text/css">
-
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-    <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-
-    <!-- Custom CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="css/scrolling-nav.css" rel="stylesheet" type="text/css">
-
 </head>
 
-<!-- The #page-top ID is part of the scrolling feature - the data-spy and data-target are part of the built-in Bootstrap scrollspy function -->
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
-
     <nav class="navbar navbar-default navbar-fixed-top " role="navigation">
         <div class="container">
             <div class="navbar-header page-scroll">
@@ -38,11 +30,8 @@
                     Anglotraducciones
                 </a>
             </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
                 <ul class="nav navbar-nav">
-                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
@@ -60,11 +49,8 @@
                     </li>
                 </ul>
             </div>
-            <!-- /.navbar-collapse -->
         </div>
-        <!-- /.container -->
     </nav>
-
     <section id="intro" class="intro-section">
         <div class="intro-header">
 
@@ -81,11 +67,8 @@
             </div>
 
         </div>
-        <!-- /.container -->
-
     </div>
     </section>
-
     <section id="about" class="about-section">
         <div class="container">
             <div class="row">
@@ -94,7 +77,7 @@
                 <br>
                 <br>
                 <div class="col-md-4 centered">
-                    <img class="img img-circle" src="gloria.jpg" height="120px"alt="">
+                    <img class="img img-circle" src="images/gloria.jpg" height="120px"alt="">
                     <br>
                     <h4><b>Gloria Alveal</b></h4>
                     <a href="http://cl.linkedin.com/pub/gloria-alveal/21/824/356"><i class="fa fa-linkedin-square"></i></a>
@@ -102,7 +85,7 @@
                     encargada de gestión de proyectos.</p>
                 </div>
                 <div class="col-md-4 centered">
-                    <img class="img img-circle" src="karla.jpg" height="120px" width="120px" alt="">
+                    <img class="img img-circle" src="images/karla.jpg" height="120px" width="120px" alt="">
                     <br>
                     <h4><b>Karla Alveal</b></h4>
                     <a href="http://cl.linkedin.com/pub/karla-alveal-saavedra/95/695/86b"><i class="fa fa-linkedin-square"></i></a>
@@ -110,7 +93,7 @@
                     especializada en traducciones técnicas y científicas.</p>
                 </div>
                 <div class="col-md-4 centered">
-                    <img class="img img-circle" src="carol.jpg" height="120px" width="120px" alt="">
+                    <img class="img img-circle" src="images/carol.jpg" height="120px" width="120px" alt="">
                     <br>
                     <h4><b>Carol Cardonne</b></h4>
                     <a href="http://cl.linkedin.com/pub/carol-cardonne/87/959/27a"><i class="fa fa-linkedin-square"></i></a>
@@ -141,73 +124,82 @@
                 <hr/>
                 <br>
                 <br>
-                <div class="row centered">
-                    <div class="col-md-3 centered">
+                <div class="row">
+                    <div class="col-md-2">
                         <a href="http://www.masisa.cl">
-                            <img class="img" src="masisa.jpg" alt="Masisa">
+                            <img class="img" src="images/masisa.jpg" alt="Masisa">
                         </a>
                     </div>
-                    <div class="col-md-3 centered">
+                    <div class="col-md-2">
                         <a href="http://www.codelco.cl">
-                            <img class="img" src="codelco.jpg" alt="Codelco">
+                            <img class="img" src="images/codelco.jpg" alt="Codelco">
                         </a>
                     </div>
-                    <div class="col-md-3 centered">
+                    <div class="col-md-2">
                         <a href="http://www.lpchile.cl">
-                            <img class="img" src="lp.jpg" alt="LP">
+                            <img class="img" src="images/lp.jpg" alt="LP">
                         </a>
                     </div>
-                    <div class="col-md-3 centered">
+                    <div class="col-md-2">
                         <a href="http://www.procarne.cl">
-                            <img class="img" src="procarne.jpg" alt="Procarne">
+                            <img class="img" src="images/procarne.jpg" alt="Procarne">
+                        </a>
+                    </div>
+                    <div class="col-md-2">
+                        <a href="http://www.globalrisk.cl">
+                            <img class="img" src="images/fgr.jpg" alt="Faraggi Globalrisk">
+                        </a>
+                    </div>
+                    <div class="col-md-2">
+                        <a href="http://www.arauco.cl">
+                            <img class="img" src="images/arauco.jpg" alt="Arauco">
                         </a>
                     </div>
                 </div>
                 <br>
-                <div class="row centered">
-                    <div class="col-md-3 centered">
+                <div class="row">
+                    <div class="col-md-3">
                         <a href="http://www.mafrisur.cl">
-                            <img class="img" src="mafrisur.jpg" alt="Mafrisur">
+                            <img class="img" src="images/mafrisur.jpg" alt="Mafrisur">
                         </a>
                     </div>
-                    <div class="col-md-3 centered">
+                    <div class="col-md-3">
                         <a href="http://www.diarioaustral.cl">
-                            <img class="img" src="diarioaustral.jpg" alt="Diario Austral">
+                            <img class="img" src="images/diarioaustral.jpg" alt="Diario Austral">
                         </a>
                     </div>
-                    <div class="col-md-3 centered">
+                    <div class="col-md-3">
                         <a href="http://chile.usembassy.gov">
-                            <img class="img" src="usembassy.jpg" alt="US Embassy">
+                            <img class="img" src="images/usembassy.jpg" alt="US Embassy">
                         </a>
                     </div>
-                    <div class="col-md-3 centered">
+                    <div class="col-md-3">
                         <a href="http://www.carabineros.cl">
-                            <img class="img" src="carabineros.jpg" alt="Carabineros">
+                            <img class="img" src="images/carabineros.jpg" alt="Carabineros">
                         </a>
                     </div>
                 </div>
                 <br>
-                <div class="row centered">
-                    <div class="col-md-4 centered">
+                <div class="row">
+                    <div class="col-md-4">
                         <a href="http://www.sernatur.cl">
-                            <img class="img" src="sernatur.jpg" alt="Sernatur">
+                            <img class="img" src="images/sernatur.jpg" alt="Sernatur">
                         </a>
                     </div>
-                    <div class="col-md-4 centered">
+                    <div class="col-md-4">
                         <a href="http://www.uach.cl">
-                            <img class="img" src="uach.jpg" alt="Uach">
+                            <img class="img" src="images/uach.jpg" alt="Uach">
                         </a>
                     </div>
-                    <div class="col-md-4 centered">
+                    <div class="col-md-4">
                         <a href="http://www.municipalidadosorno.cl">
-                            <img class="img" src="municipalidadosorno.jpg" alt="Municipalidad de Osorno">
+                            <img class="img" src="images/municipalidadosorno.jpg" alt="Municipalidad de Osorno">
                         </a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
     <section id="contact" class="contact-section">
         <div class="container">
             <div class="row">
@@ -247,7 +239,7 @@
 
                 <div class="col-sm-4">
                   <h3>Anglotraducciones</h3>
-                  <h4>Servicios de Traducción</h4>
+                  <h4>Servicios Lingüísticos</h4>
                   <p>
                     Apoquindo 7600, Dpto. 40A.<br>
                     Las Condes, Región Metropolitana<br>
@@ -288,12 +280,9 @@
             </div>
         </div>
     </footer> -->
-    <!-- Core JavaScript Files -->
     <script src="js/jquery-1.10.2.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.easing.min.js"></script>
-
-    <!-- Custom Theme JavaScript -->
     <script src="js/scrolling-nav.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
