horario nuevo y telefono

--- a/index.html
+++ b/index.html
@@ -202,12 +202,12 @@
     </section>
     <section id="contact" class="contact-section">
         <div class="container">
-            <div class="row">
+            <div class="row" style="text-align: center;">
                 <h1 style="text-align: center;">CONTACTO</h1>
                 <hr/>
                 <br>
                 <br>
-                <div class="col-sm-8">
+                <!-- <div class="col-sm-8">
                     <h3>Let's Get In Touch!</h3>
                     <p>Si necesitas que nos comuniquemos contigo, o alguna cotización, deja tus datos y te contactaremos.</p>
                     <form role="form" method="POST" action="contact-form-submission.php">
@@ -235,20 +235,20 @@
                           </div>
                         </div>
                     </form>
-                </div>
+                </div> -->
 
-                <div class="col-sm-4">
+                <div class="col-md-12">
                   <h3>Anglotraducciones</h3>
                   <h4>Servicios Lingüísticos</h4>
                   <p>
                     Apoquindo 7600, Dpto. 40A.<br>
                     Las Condes, Región Metropolitana<br>
                   </p>
-                  <p><i class="fa fa-phone"></i>: (56) 0447910483</p>
-                  <p><i class="fa fa-mobile"></i>: (56) 973830457</p>
-                  <p><i class="fa fa-mobile"></i>: (56) 993157811</p>
+                  <p><i class="fa fa-phone"></i>: +56 2 27277074</p>
+                  <p><i class="fa fa-mobile"></i>: +56 9 73830457</p>
+                  <p><i class="fa fa-mobile"></i>: +56 9 93157811</p>
                   <p><i class="fa fa-envelope-o"></i>: <a href="mailto:contacto@anglotraducciones.cl">contacto@anglotraducciones.cl</a></p>
-                  <p><i class="fa fa-clock-o"></i>: Lunes - Viernes: 9:00 a 17:00</p>
+                  <p><i class="fa fa-clock-o"></i>: Lunes - Viernes: 9:00 a 20:00 | Sábado: 9:00 a 14:00</p>
                   <ul class="list-unstyled list-inline list-social-icons">
                     <li class="tooltip-social facebook-link"><a href="#facebook-page" data-toggle="tooltip" data-placement="top" title="" data-original-title="Facebook"><i class="fa fa-facebook-square fa-2x"></i></a></li>
                     <li class="tooltip-social twitter-link"><a href="#twitter-profile" data-toggle="tooltip" data-placement="top" title="" data-original-title="Twitter"><i class="fa fa-twitter-square fa-2x"></i></a></li>
