new arauco image, inacap and services

--- a/index.html
+++ b/index.html
@@ -110,8 +110,18 @@
           <hr/>
           <br/>
           <br/>
-          <div class="cl-lg">
-
+          <div class="col-lg-6">
+            <h3>Traducciones Inglés-Español</h3>
+            <h3>Traducciones Español-Inglés</h3>
+            <h3>Revisión de textos</h3>
+            <h3>Edición de textos</h3>
+            <h3>Interpretariado</h3>
+          </div>
+          <div class="col-lg-6">
+            <h3>Clases particulares de inglés individuales</h3>
+            <h3>Clases particulares de inglés grupales</h3>
+            <h3>Preparación TOEFL</h3>
+            <h3>Preparación TOIC</h3>
           </div>
         </div>
       </div>
@@ -187,14 +197,19 @@
         </div>
         <br/>
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-4">
             <a href="http://www.globalrisk.cl" target="_blank">
               <img class="img" src="images/fgr.jpg" alt="Faraggi Globalrisk"/>
             </a>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-4">
             <a href="http://www.arauco.cl" target="_blank">
               <img class="img" src="images/arauco.jpg" alt="Arauco"/>
+            </a>
+          </div>
+          <div class="col-md-4">
+            <a href="http://www.inacap.cl/tportalvp/osorno/" target="_blank">
+              <img class="img" src="images/inacap.jpg" height="70px" alt="Arauco"/>
             </a>
           </div>
         </div>
