--- a/index.html
+++ b/index.html
@@ -113,15 +113,14 @@
           <div class="col-lg-6">
             <h3>Traducciones Inglés-Español</h3>
             <h3>Traducciones Español-Inglés</h3>
-            <h3>Revisión de textos</h3>
-            <h3>Edición de textos</h3>
+            <h3>Revisión y edición de textos</h3>
             <h3>Interpretariado</h3>
           </div>
           <div class="col-lg-6">
-            <h3>Clases particulares de inglés individuales</h3>
-            <h3>Clases particulares de inglés grupales</h3>
+            <h3>Capacitación in-office, individual y grupal</h3>
+            <h3>Clases de Español</h3>
             <h3>Preparación TOEFL</h3>
-            <h3>Preparación TOIC</h3>
+            <h3>Preparación TOEIC</h3>
           </div>
         </div>
       </div>
