--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="col-lg-12">
               <div class="intro-message">
                 <h1>Servicios Lingüísticos</h1>
-                <h3 style="font-weight: 900;">Traducciones Inglés-Español-Inglés, Revisión y Edición de Textos</h3>
+                <h3 style="font-weight: 900;">Soluciones a tu medida</h3>
                 <hr class="intro-divider"/>
               </div>
             </div>
@@ -229,8 +229,8 @@
               Las Condes, Región Metropolitana<br>
             </p>
             <p><i class="fa fa-phone"></i>: +56 2 27277074</p>
-            <p><i class="fa fa-mobile"></i>: +56 9 73830457</p>
             <p><i class="fa fa-mobile"></i>: +56 9 93157811</p>
+            <p><i class="fa fa-mobile"></i>: +56 9 73830457</p>
             <p><i class="fa fa-envelope-o"></i>: <a href="mailto:contacto@anglotraducciones.cl">contacto@anglotraducciones.cl</a></p>
             <p><i class="fa fa-clock-o"></i>: Lunes - Viernes: 9:00 a 20:00 | Sábado: 9:00 a 14:00</p>
             <ul class="list-unstyled list-inline list-social-icons">
