--- a/index.html
+++ b/index.html
@@ -227,11 +227,10 @@
             <h3>Anglotraducciones</h3>
             <h4>Servicios Lingüísticos</h4>
             <p>
-              Apoquindo 7600, Dpto. 40A.<br>
+              Blanco Encalada 1771, Dpto. 1901<br>
               Las Condes, Región Metropolitana<br>
             </p>
-            <p><i class="fa fa-phone"></i>: +56 2 27277074</p>
-            <p><i class="fa fa-mobile"></i>: +56 9 93157811</p>
+            <p><i class="fa fa-phone"></i>: +56 2 29191540</p>
             <p><i class="fa fa-mobile"></i>: +56 9 73830457</p>
             <p><i class="fa fa-envelope-o"></i>: <a href="mailto:contacto@anglotraducciones.cl">contacto@anglotraducciones.cl</a></p>
             <p><i class="fa fa-clock-o"></i>: Lunes - Viernes: 9:00 a 20:00 | Sábado: 9:00 a 14:00</p>
