--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             <h4>Servicios Lingüísticos</h4>
             <p>
               Blanco Encalada 1771, Dpto. 1901<br>
-              Las Condes, Región Metropolitana<br>
+              Santiago, Región Metropolitana<br>
             </p>
             <p><i class="fa fa-phone"></i>: +56 2 29191540</p>
             <p><i class="fa fa-mobile"></i>: +56 9 73830457</p>
